--- a/src/sass/media/media.scss
+++ b/src/sass/media/media.scss
@@ -1,3 +1,27 @@
+@media (min-width: 1820px) {
+    .main {
+        &__content {
+            max-width: 650px;
+        }
+    }
+    .text {
+        font-size: 24px;
+    }
+    .subtitle {
+        font-size: 28px;
+    }
+    .btn_join {
+        height: 70px;
+    }
+    .btn_login {
+        width: 120px;
+    }
+    .form__input {
+        max-height: 50px;
+        font-size: 20px;
+    }
+}
+
 @media (max-width: 1440px) {
     .header {
         flex-direction: row-reverse;
@@ -13,9 +37,6 @@
         }
         &__left {
             position: relative;
-            .main__content {
-                max-width: 60%;
-            }
         }
     }
     .circle_main {
@@ -41,5 +62,63 @@
 @media (max-width: 1024px) {
     .main__content {
         max-width: 100%;
+    }
+}
+
+@media (max-width: 768px) {
+    .title {
+        font-size: 70px;
+        line-height: 70px;
+    }
+    *::hover {
+        display: none;
+    }
+}
+
+@media (max-width: 500px) {
+    .title {
+        font-size: 60px;
+        line-height: 60px;
+    }
+    .subtitle {
+        font-size: 22px;
+    }
+    .text {
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 400px) {
+    .main {
+        &__left {
+            padding: 30px;
+        }
+        &__right {
+            padding: 30px;
+        }
+        &__content {
+            gap: 25px;
+        }
+    }
+    .title {
+        font-size: 36px;
+        line-height: 36px;
+    }
+    .text {
+        font-size: 16px;
+    }
+    .btn, .subtitle {
+        font-size: 18px;
+        height: 50px;
+        width: 100%;
+    }
+    .qa {
+        margin: 0;
+        &__block {
+            padding: 20px 20px;
+            .subtitle {
+                height: auto;
+            }
+        }
     }
 }
