--- a/src/sass/sections/main.scss
+++ b/src/sass/sections/main.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     min-height: 773px;
+    height: 100%;
     &__left {
         width: 50%;
         padding: 130px 50px 0px 50px;
